--- a/account/templates/registration/password_reset_email.html
+++ b/account/templates/registration/password_reset_email.html
@@ -2,4 +2,4 @@
 
 {% blocktrans with v0=email %}Jemand hat auf myactivities.net  um eine Passwort-Zurücksetzung gebeten und folgende E-Mail angegeben: {{ v0 }}. Falls Sie Ihr Passwort zurücksetzen wollen, folgen Sie diesem Link:{% endblocktrans %}
 {{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
-{% blocktrans %}Falls Sie es vergessen haben sollten, Ihr Nutzername lautet: {{ v0 }}{% endblocktrans %}
+{% blocktrans with v0=user.username %}Falls Sie es vergessen haben sollten, Ihr Nutzername lautet: {{ v0 }}{% endblocktrans %}
