--- a/account/templates/account/user_post_list.html
+++ b/account/templates/account/user_post_list.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 
 {% block title %}{% blocktrans %}Ihre Posts{% endblocktrans %}{% endblock %}
 
 {% block content %}
     <h1>{% blocktrans %}Ihre Posts{% endblocktrans %}</h1>
-    <h2><a href="{% url 'wall:create_post' 'account' 'user' user.id %}">{% blocktrans %}Post erstellen...{% endblocktrans %}</a></h2>
+    <div class="button-like" onclick=openLink("{% url 'wall:create_post' 'account' 'user' user.id %}")><img src="{% static 'icons/post.png' %}">{% blocktrans %}Post erstellen{% endblocktrans %}</div>
     <p>{% blocktrans %}Die Posts sind öffentlich auf Ihrer Profilseite sichtbar.{% endblocktrans %}</p>
     {% include 'wall/post/post_loop.html' %}
 {% endblock %}
