--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 {% load cookielaw_tags %}
 {% load account_tags %}
 
@@ -18,7 +19,7 @@
             </p>
         {% else %}
         <p><strong>{% trans "Willkommen bei myactivities.net! :)" %}</strong></p>
-        <p> <a href="{% url 'account:about' %}">{% trans "Was ist das hier?" %}</a></p>
+        <div class="button-like" onclick=openLink("{% url 'account:about' %}")><img src="{% static 'icons/question.png' %}">{% trans "Was ist das hier?" %}</div>
             <p>{% trans "Bitte nutzen Sie das folgende Formular zum einloggen:" %}</p>
             <form method="post" action="{% url 'account:login' %}" class="login-form">
                 {{ form.as_p }}
@@ -27,7 +28,16 @@
                 <input type="submit" value="{% trans "Einloggen" %}">
             </form>
         {% endif %}
-        <p><a href="{% url 'account:password_reset' %}">{% trans "Passwort zurücksetzen" %}</a> | <a href="{% url 'account:register' %}">{% trans "Registrieren" %}</a></p>
+        <div class="competitive" style="margin: 10px 0; font-size: 16px;">
+            <div class="left" onclick=openLink("{% url 'account:password_reset' %}")>
+                <img src="{% static 'icons/reset.png' %}">
+                {% trans "Passwort zurücksetzen" %}
+            </div>
+            <div class="right" onclick=openLink("{% url 'account:register' %}")>
+                <img src="{% static 'icons/registration.png' %}">
+                {% trans "Registrieren" %}
+            </div>
+        </div>
     </div>
     </div>
 {% endblock %}
