--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -30,7 +30,7 @@
     </div>
     <span style="clear: both;"></span>
     {% endif %}
-        <a class="center-container" href="{% url 'activity:leave' activity.name %}"><button class="blue-button">{% trans "Austreten" %}</button></a>
+         <p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'activity:leave' activity.name %}")>{% trans "Austreten" %}</button></div></p>
         <h3>{% trans "Suche nach Mitgliedern" %}</h3>
         <p>{% include 'activity/location_selection.html' %}</p>
         {% include 'account/user_loop.html' %}
@@ -39,10 +39,10 @@
         <p>
             {% trans "Um Mitglieder anzeigen zu können, müssen Sie beitreten." %}
         </p>
-        <a class="center-container" href="{% url 'activity:join' activity.name %}"><button class="blue-button">{% trans "Beitreten" %}</button></a>
+        <p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'activity:join' activity.name %}")>{% trans "Beitreten" %}</button></div></p>
     {% endif %}
 
     <h3>{% trans "Beiträge" %} {{ chosen_component|inim }}</h3>
-    <h2><a href="{% url 'wall:create_post' 'activity' 'activity' activity.id activity.id %}">{% blocktrans %}Post erstellen...{% endblocktrans %}</a></h2>
+    <div class="button-like" onclick=openLink("{% url 'wall:create_post' 'activity' 'activity' activity.id activity.id %}")><img src="{% static 'icons/post.png' %}">{% blocktrans %}Post erstellen{% endblocktrans %}</div>
     {% include 'wall/post/post_loop.html' %}
 {% endblock %}
