--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -1,11 +1,12 @@
 html {
-    height: 100%;
     background-color: #2d2d2d;
     overflow: auto;
 }
 
 body {
-    height: 100%;
+    height: 100vh;
+    margin: 0;
+    padding-bottom: 20px;
 }
 
 .base-container {
@@ -17,7 +18,7 @@ body {
     top: 50px;
     left: 0px;
     right: 5px;
-    bottom: 5px;
+    bottom: 0;
     margin-left: 10px;
     color: white;
     font-family: "Arial", "Verdana", "Helvectica";
@@ -217,11 +218,15 @@ select:focus, select:hover {
     border-radius: 10%;
 }
 
+.list {
+    display: block;
+}
+
 .list .item {
     cursor: pointer;
     width: 250px;
     height: 200px;
-    float: left;
+    display: inline-block;
     margin: 10px 10px;
     padding-bottom: 5px;
     border: 1px solid #1a1a1a;
@@ -229,6 +234,8 @@ select:focus, select:hover {
     color: white;
     font-family: "Arial", "Verdana", "Helvectica";
     background-color: gray;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 .list .item:hover {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
