--- a/multiplayer/templates/css/match.css
+++ b/multiplayer/templates/css/match.css
@@ -1,4 +1,71 @@
-.box {
-    margin: 20px 20px 20px 20px;
+.match-members {
+    position: absolute;
+    top: 70%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
+.member-grid {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.member-grid table {
+    width: 100%;
+    height: 100%;
+    border: 0px;
+}
+
+td {
+    width: 50%;
+    height: 50%;
+}
+
+.grid-overview {
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid-overview .number {
+    float: left;
+    width: 10%;
+}
+.grid-overview .username {
+    float: left;
+    width: 70%;
+}
+.grid-overview .kick-img {
+    float: left;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+.grid-overview .kick-img img {
+    display: none;
+    cursor: pointer;
+}
+
+.grid-overview img {
+    height: 30px;
+}
+
+.online-table {
+    height: 10px;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+.match-chat {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 30%;
+}
