--- a/multiplayer/templates/multiplayer/durak.html
+++ b/multiplayer/templates/multiplayer/durak.html
@@ -14,5 +14,6 @@
     {% include 'javascript/cards.js' %}
     {% include 'javascript/connect.js' %}
     {% include 'javascript/durak.js' %}
+    {% include 'javascript/room.js' %}
     {% include 'javascript/audiochat.js' %}
 {% endblock %}
