--- a/multiplayer/templates/css/lobby.css
+++ b/multiplayer/templates/css/lobby.css
@@ -1,3 +1,67 @@
 #match-list td:hover {
     background-color: lightgray;
 }
+
+.match-list {
+    display: block;
+}
+
+.match-list .item {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    display: inline-block;
+    margin: 10px 10px;
+    padding-bottom: 5px;
+    border: 1px solid #1a1a1a;
+    border-radius: 15px;
+    color: white;
+    font-family: "Arial", "Verdana", "Helvectica";
+    background-color: gray;
+    scrollbar-width: none;
+}
+.match-list .item:hover {
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    border: 1px solid rgba(81, 203, 238, 1);
+}
+.match-list .item .top {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+.match-list .item .top img {
+    max-width: 100%;
+    max-height: 60%;
+    object-fit: cover;
+}
+.match-list .item .middle {
+    position: absolute;
+    width: 100%;
+    top: 30%;
+    bottom: 25%;
+    text-align: center;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+.match-list .item .bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+}
+
+.bottom .button-like {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 15px;
+}
+.bottom .button-like:hover {
+    background-color: darkgray;
+}
